macros/tests/ui/unknown_sql_field_key.stderr
error: Unknown sql field attribute `bytse` Did you mean `bytes`? Supported field attributes for Insert: bytes.
  --> tests/ui/unknown_sql_field_key.rs:10:11
   |
10 |     #[sql(bytse)]
   |           ^^^^^
